<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <POU Name="op130_tool_change" Id="{69ea4060-d189-4178-a378-101f20876eae}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM op130_tool_change
VAR
	op130_1_tool_change : tool_changeover;
	op130_2_tool_change : tool_changeover;
	fb_reset_1       :BOOL;
	fb_reset_2       :BOOL;
	
	// VERTICAL 1
	OP130_V1_TOL_UNLOD_STRT					: BOOL;
	OP130_V1_TOL_LOAD_STRT					: BOOL;
	OP130_V1_TOL_DISENGAGE					: BOOL;
	OP130_V1_TOL_ENGAGE						: BOOL;
	op130_t1_manual_lock                    : BOOL;
	op130_t1_manual_unlock                  : BOOL;
	OP130_V1_UNLD_STUS                      : STRING;
	OP130_V1_LOAD_STUS                      : STRING;
	
	// VERTICAL 2
	
	OP130_V2_TOL_UNLOD_STRT					: BOOL;
	OP130_V2_TOL_LOAD_STRT					: BOOL;
	OP130_V2_TOL_DISENGAGE					: BOOL;
	OP130_V2_TOL_ENGAGE						: BOOL;
	op130_t2_manual_lock                    : BOOL;
	op130_t2_manual_unlock                  : BOOL;
	OP130_V2_UNLD_STUS                      : STRING;
	OP130_V2_LOAD_STUS                      : STRING;
	
	tool_6_fb: BOOL;
	tool_8_fb: BOOL;
	
	OP130_TOOL_CHANGE_MODE_SELECTED: BOOL;
END_VAR


VAR PERSISTENT
	
	OP130_V1_TOL_WRK_POS					: LREAL;
	OP130_V1_TOL_HME_POS					: LREAL;
	op130_v1_TOL_VELOCITY					: LREAL;
	OP130_V1_TOL_CHNGE_CMPLE				: BOOL;
	OP130_V1_TOL_LOAD_COMPLE                : BOOL;
	OP130_V1_TOL_UNLOAD_COMPLE              : BOOL;
	   
	OP130_V2_TOL_WRK_POS					: LREAL;
	OP130_V2_TOL_HME_POS					: LREAL;
	op130_V2_T0L_VELOCITY					: LREAL;
	OP130_V2_TOL_CHNGE_CMPLE				: BOOL;
	OP130_V2_TOL_LOAD_COMPLE                : BOOL;
	OP130_V2_TOL_UNLOAD_COMPLE              : BOOL;
	
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[IF OP130_TOOL_CHANGE_MODE_SELECTED THEN
op130_1_tool_change(
	actual_pos:= , 
	actual_vel:= , 
	target_work_pos:= OP130_V1_TOL_WRK_POS, 
	target_home_pos:= OP130_V1_TOL_HME_POS, 
	target_vel_from_hmi:= op130_v1_TOL_VELOCITY, 
	station_number:= , 
	mover_number:= , 
	no_of_mover_present:= , 
	model_selected:= model_selected, 
	tool_unloading_start:=OP130_V1_TOL_UNLOD_STRT , 
	tool_loading_start:=OP130_V1_TOL_LOAD_STRT , 
	error_active:=OP130_ErrorActive , 
	station_in_auto:= OP130_Auto, 
	station_in_home:=  OP130_Temp_Home_Ok, 
	absoulte_move_done:= , 
	tool_6_3_present:= tool_6_fb, 
	tool_7_89_present:= tool_8_fb, 
	fb_reset:=fb_reset_1,
	SERVO_TOL_CHECK_OFFSET_POS := 18, 
	tool_changer_over_complete=> OP130_V1_TOL_CHNGE_CMPLE,
	tool_disengage=> OP130_V1_TOL_DISENGAGE, 
	tool_engagae=> OP130_V1_TOL_ENGAGE, 
	tool_loading_complete=> OP130_V1_TOL_LOAD_COMPLE, 
	tool_unloading_complete=> OP130_V1_TOL_UNLOAD_COMPLE, 
	servo_move_abs=>, 
	unloading_status=>OP130_V1_UNLD_STUS , 
	loading_status=>OP130_V1_LOAD_STUS,
    tool_loading_failed :=  , 
	target_pos_to_servo=> , 
	target_vel_to_servo=> );
	
	op130_2_tool_change(
	actual_pos:=  , 
	actual_vel:= , 
	target_work_pos:= OP130_V2_TOL_WRK_POS, 
	target_home_pos:= OP130_V2_TOL_HME_POS, 
	target_vel_from_hmi:= op130_V2_T0L_VELOCITY, 
	station_number:= , 
	mover_number:= , 
	no_of_mover_present:= , 
	model_selected:= model_selected, 
	tool_unloading_start:=OP130_V2_TOL_UNLOD_STRT , 
	tool_loading_start:=OP130_V2_TOL_LOAD_STRT , 
	error_active:=OP130_ErrorActive , 
	station_in_auto:= OP130_Auto, 
	station_in_home:=  OP130_Temp_Home_Ok, 
	absoulte_move_done:= SR140_Vert_Servo_Ctrl_2.Axis_In_Pos, 
	tool_6_3_present:= tool_6_fb, 
	tool_7_89_present:= tool_8_fb, 
	fb_reset:=fb_reset_1,
	SERVO_TOL_CHECK_OFFSET_POS := 18, 
	tool_changer_over_complete=> OP130_V2_TOL_CHNGE_CMPLE,
	tool_disengage=> OP130_V2_TOL_DISENGAGE, 
	tool_engagae=> OP130_V2_TOL_ENGAGE, 
	tool_loading_complete=> OP130_V2_TOL_LOAD_COMPLE, 
	tool_unloading_complete=> OP130_V2_TOL_UNLOAD_COMPLE, 
	servo_move_abs=>, 
	unloading_status=>OP130_V2_UNLD_STUS , 
	loading_status=>OP130_V2_LOAD_STUS,
    tool_loading_failed :=  , 
	target_pos_to_servo=> , 
	target_vel_to_servo=> );
	
	END_IF
	
//// op 130 tool 1 outputs/////

	
IF op130_t1_manual_lock OR OP130_V1_TOL_ENGAGE THEN
	O130_LH_TOOL_CHO_LOCK_Q1340_5     :=TRUE;
ELSIF op130_t1_manual_unlock OR OP130_V1_TOL_DISENGAGE THEN
	O130_LH_TOOL_CHO_UNLOCK_Q1340_4   :=TRUE;
ELSE
	O130_LH_TOOL_CHO_LOCK_Q1340_5     :=FALSE;
	O130_LH_TOOL_CHO_UNLOCK_Q1340_4   :=FALSE;
END_IF
   

//// op 130 tool 2 outputs///// 	

IF op130_t2_manual_lock OR OP130_V2_TOL_ENGAGE THEN
	O130_RH_TOOL_CHO_LOCK_Q1340_7      :=TRUE;
ELSIF op130_t2_manual_unlock OR OP130_V2_TOL_DISENGAGE THEN
	O130_RH_TOOL_CHO_UNLOCK_Q1340_6    :=TRUE;
ELSE
	O130_RH_TOOL_CHO_UNLOCK_Q1340_6   :=FALSE;
	O130_RH_TOOL_CHO_LOCK_Q1340_7     :=FALSE;
END_IF	
	]]></ST>
    </Implementation>
    <LineIds Name="op130_tool_change">
      <LineId Id="59" Count="28" />
      <LineId Id="204" Count="0" />
      <LineId Id="88" Count="30" />
      <LineId Id="203" Count="0" />
      <LineId Id="119" Count="0" />
      <LineId Id="5" Count="0" />
      <LineId Id="125" Count="0" />
      <LineId Id="120" Count="0" />
      <LineId Id="127" Count="0" />
      <LineId Id="129" Count="21" />
      <LineId Id="128" Count="0" />
      <LineId Id="126" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>